--- a/task-1-responsive-layout-and-typography/Task 1.html
+++ b/task-1-responsive-layout-and-typography/Task 1.html
@@ -25,13 +25,14 @@
 
 
    <main> 
-    <article> 
+    <section class="introduction"> 
         <h1> Erased Tapes: Exploring the Sonic Frontier</h1>
         <p class = "first-paragraph">Lorem ipsum odor amet, consectetuer adipiscing elit. Mi eu scelerisque 
             turpis posuere tempor? Leo condimentum himenaeos molestie elit; maximus 
             iaculis proin nulla. Ullamcorper nibh cras conubia suscipit dapibus sagittis, 
             facilisi habitant vivamus. Etiam fusce posuere himenaeos 
             ipsum commodo sollicitudin himenaeos nec.</p>
+    </section>
 
             <h2>Heading</h2>
             <p>Montes ridiculus mus tellus nunc vulputate. Cras facilisi congue et facilisis porttitor litora etiam praesent porttitor. 
@@ -70,14 +71,27 @@
                 torquent curae. Fames rhoncus torquent sed convallis; potenti cras. Dictumst arcu libero nulla malesuada mi ridiculus platea. 
                 Interdum ullamcorper fringilla himenaeos mollis; in arcu pharetra massa. Nunc mauris taciti montes sapien molestie orci ac quis.</p>
 
-            <h2>The Author</h2>
+    <section class="album-covers">
+        <div class="album">
+            <img src="assets/all-encores.jpg" alt="Album 1">
+            <img src="assets/articulation.jpg" alt="Album 2">
+            <img src="assets/blurred.jpg" alt="Album 3">
+            <img src="assets/encores-2.jpg" alt="Album 4">
+            <img src="assets/eulogy-for-evolution.jpg" alt="Album 5">
+            <img src="assets/the-cell.jpg" alt="Album 6">
+        </div>
+    </section>
+
+
+    <section class="author-info">
             <div class="author">
                 <img src="assets/profile_picture.jpg" alt="Author's Photo">
+                <h2>The Author</h2>
                 <p>Sapien leo scelerisque per convallis torquent nunc. Lobortis eleifend a nam sit turpis nostra. 
                     Tempus suspendisse libero curae faucibus lobortis litora bibendum praesent! Eget quam magna, 
                     diam commodo interdum sapien magnis.</p>
             </div>    
-        </article>
+    </section>
    </main>
 
 
