--- a/task-1-responsive-layout-and-typography/Task 1.html
+++ b/task-1-responsive-layout-and-typography/Task 1.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erased Tapes</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Protest+Guerrilla&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <!-- Header section of the website -->
+    <!-- Header section with logo and nav list -->
     <header>
         <div class="logo">
             <img src="assets/logo.svg" alt="Logo">
@@ -29,36 +27,37 @@
     <main>
         <section class="introduction">
             <h1>Erased Tapes: Exploring the Sonic Frontier</h1>
-            <p class="first-paragraph">Lorem ipsum odor amet, consectetuer adipiscing elit. Mi eu scelerisque turpis posuere tempor.</p>
+            <p class="first-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
         </section>
 
         <section class="content">
             <h2>Heading</h2>
-            <p>Montes ridiculus mus tellus nunc vulputate. Cras facilisi congue et facilisis porttitor litora etiam praesent porttitor.</p>
-            <p>Laoreet volutpat hendrerit est aliquam; fusce quam tempor. Nisi interdum praesent pellentesque non non blandit cubilia et.</p>
+            <p>First paragraph text goes here...</p>
+            <p>Second paragraph text goes here...</p>
 
             <h2>Heading</h2>
-            <p>Habitasse ornare fames facilisis montes pulvinar habitasse fringilla. Risus porta cursus duis vivamus quam adipiscing nec.</p>
-            <p>Amet ac leo, imperdiet hac litora auctor. Suscipit congue duis sociosqu auctor euismod vivamus urna diam.</p>
+            <p>Third paragraph text goes here...</p>
+            <p>Fourth paragraph text goes here...</p>
 
             <h2>Heading</h2>
-            <p>Vulputate nullam tempus montes eu tellus integer adipiscing pulvinar. Pharetra eu luctus id a potenti.</p>
+            <p>Fifth paragraph text goes here...</p>
         </section>
 
         <!-- Album Covers Section -->
         <section class="album-covers">
-            <div class="album">
-                <img src="assets/all-encores.jpg" alt="Album Cover 1">
-                <img src="assets/articulation.jpg" alt="Album Cover 2">
-                <img src="assets/blurred.jpg" alt="Album Cover 3">
+            <div class="album-grid">
+                <div class="album-cover">Album Cover</div>
+                <div class="album-cover">Album Cover</div>
+                <div class="album-cover">Album Cover</div>
+                <div class="album-cover">Album Cover</div>
             </div>
         </section>
 
         <section class="author-info">
+            <h2>The Author</h2>
             <div class="author">
                 <img src="assets/profile_picture.jpg" alt="Author's Photo">
-                <h2>The Author</h2>
-                <p>Sapien leo scelerisque per convallis torquent nunc. Lobortis eleifend a nam sit turpis nostra.</p>
+                <p>Author information goes here...</p>
             </div>
         </section>
     </main>
