--- a/Trial and error task-2-advanced-layout/index.html
+++ b/Trial and error task-2-advanced-layout/index.html
@@ -8,96 +8,84 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Teko:wght@300..700&display=swap"
-        rel="stylesheet">
 </head>
 
 <body>
+    <!-- Header Section -->
     <header>
         <nav>
-            <h1 class="logo"> watch.it </h1>
-            <!-- This needs to be hidden for mobile screen and only shown for desktop and tablets -->
-            <ul>
-                <li><a href="#"> Action </a></li>
-                <li><a href="#"> Comedy </a></li>
-                <li><a href="#"> Romance </a></li>
-                <li><a href="#"> Drama </a></li>
-            </ul>
-            <button class="Search_btn"> SEARCH </button>
+            <h1 class="logo">watch.it</h1>
+            <button class="Search_btn">Search</button>
         </nav>
     </header>
 
+    <!-- Main Content Section -->
     <main>
+        <!-- Movie Card 1 -->
         <div class="movie_content">
+            <img src="assets/palm-springs.jpg" alt="Palm Springs Movie Poster">
             <div class="movie_info">
-            <img src="assets/barbie.jpg" alt="Barbie Movie Poster">
-                <p> Step into the dazzling world of Barbie as she embarks on an unexpected journey
-                    from her perfect doll life to the real world. Filled with humor, heart, and
-                    empowering messages, this vibrant adventure redefines what it means to dream big!
-                </p>
-                <!-- Ask question about the text in the watch now button does it have to be 
-                     all caps like in the wire frame or can you make it different -->
-                <button> Watch now </button>
+                <p>A never-ending wedding day turns into an unforgettable time-loop romance! Stuck in the same day, two
+                    strangers find love, chaos, and meaning in the most unexpected ways.</p>
+                <button>Watch Now</button>
             </div>
+        </div>
 
-            <div class="movie_info">
-            <img src="assets/hidden-figures.jpg" alt="Hidden Figures Movie Poster">
-                <p> Three unsung heroes of NASA's space race take the spotlight in this inspiring
-                    true story. Battling discrimination and defying the odds, these brilliant
-                    African-American women prove that intelligence, perseverance, and unity can
-                    change history and break barriers.
-                </p>
-                <button> Watch now </button>
-            </div>
-
-
-            <div class="movie_info">
-            <img src="assets/hook.jpg" alt="Hood Movie Poster">
-                <p> Rediscover Neverland in this thrilling twist on Peter Pan! Robin Williams stars
-                    as a grown-up Peter, who must rediscover his inner child to rescue his kids from
-                    the clutches of Captain Hook. Adventure, magic, and nostalgia blend in this
-                    timeless family classic.
-                </p>
-                <button> Watch now </button>
-            </div>
-
-
-            <div class="movie_info">
-            <img src="assets/la-la-land.jpg" alt="La La Land Poster">
-                <p> Love, dreams, and the magic of LA take center stage in this musical masterpiece.
-                    Watch as two starry-eyed artists navigate passion and ambition in a world where
-                    every moment feels like a cinematic spectacle!
-                </p>
-                <button> Watch now </button>
-            </div>
-
-
-            <div class="movie_info">
-            <img src="assets/palm-springs.jpg" alt="Palm Springs Poster">
-                <p> A never-ending wedding day turns into an unforgettable time-loop romance!
-                    Stuck in the same day, two strangers find love, chaos, and meaning in the
-                    most unexpected ways.
-                </p>
-                <button> WATCH NOW </button>
-            </div>
-
-
-            <div class="movie_info">
+        <!-- Movie Card 2 -->
+        <div class="movie_content">
             <img src="assets/who-framed-roger-rabbit.jpg" alt="Who Framed Roger Rabbit Poster">
-                <p> In a world where cartoons and humans coexist, a detective must solve a zany, high-stakes
-                    mystery. Packed with wild humor, groundbreaking animation, and noir twists, this unique
-                    film will pull you into a world where anything is possible!
-                </p>
-                <button> Watch Now </button>
+            <div class="movie_info">
+                <p>In a world where cartoons and humans coexist, a detective must solve a zany, high-stakes mystery.
+                    Packed with wild humor, groundbreaking animation, and noir twists, this unique film will pull you
+                    into a world where anything is possible!</p>
+                <button>Watch Now</button>
+            </div>
+        </div>
+
+        <!-- Movie Card 3 -->
+        <div class="movie_content">
+            <img src="assets/barbie.jpg" alt="Barbie Movie Poster">
+            <div class="movie_info">
+                <p>Step into the dazzling world of Barbie as she embarks on an unexpected journey from her perfect doll
+                    life to the real world. Filled with humor, heart, and empowering messages, this vibrant adventure
+                    redefines what it means to dream big!</p>
+                <button>Watch Now</button>
+            </div>
+        </div>
+
+        <!-- Movie Card 4 -->
+        <div class="movie_content">
+            <img src="assets/la-la-land.jpg" alt="La La Land Poster">
+            <div class="movie_info">
+                <p>Love, dreams, and the magic of LA take center stage in this musical masterpiece. Watch as two
+                    starry-eyed artists navigate passion and ambition in a world where every moment feels like a
+                    cinematic spectacle!</p>
+                <button>Watch Now</button>
+            </div>
+        </div>
+
+        <!-- Movie Card 5 -->
+        <div class="movie_content">
+            <img src="assets/hidden-figures.jpg" alt="Hidden Figures Movie Poster">
+            <div class="movie_info">
+                <p>Three unsung heroes of NASA's space race take the spotlight in this inspiring true story. Battling
+                    discrimination and defying the odds, these brilliant women prove that intelligence, perseverance,
+                    and unity can change history.</p>
+                <button>Watch Now</button>
+            </div>
+        </div>
+
+        <!-- Movie Card 6 -->
+        <div class="movie_content">
+            <img src="assets/hook.jpg" alt="Hidden Figures Movie Poster">
+            <div class="movie_info">
+                <p>Rediscover Neverland in this thrilling twist on Peter Pan! Robin Williams stars as a grown-up Peter, 
+                    who must rediscover his inner child to rescue his kids from the clutches of Captain Hook. Adventure, 
+                    magic, and nostalgia blend in this timeless family classic.</p>
+                <button>Watch Now</button>
             </div>
         </div>
     </main>
-
-
-
-
-
 </body>
 
 </html>
