--- a/Trial and error task-2-advanced-layout/index.html
+++ b/Trial and error task-2-advanced-layout/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>watch.it</title>
+    <title>t&e 2.0 watch.it</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,12 +21,11 @@
 
     <!-- Main Content Section -->
     <main>
-        <!-- Movie Card 1 -->
-        <div class="movie_content">
+        <!-- Movie Card 1 (Spans 2 Columns on Desktop) -->
+        <div class="movie_content featured">
             <img src="assets/palm-springs.jpg" alt="Palm Springs Movie Poster">
-            <div class="movie_info">
-                <p>A never-ending wedding day turns into an unforgettable time-loop romance! Stuck in the same day, two
-                    strangers find love, chaos, and meaning in the most unexpected ways.</p>
+            <div class="movie_info featured_info">
+                <p>A never-ending wedding day turns into an unforgettable time-loop romance! Stuck in the same day, two strangers find love, chaos, and meaning in the most unexpected ways.</p>
                 <button>Watch Now</button>
             </div>
         </div>
@@ -35,9 +34,7 @@
         <div class="movie_content">
             <img src="assets/who-framed-roger-rabbit.jpg" alt="Who Framed Roger Rabbit Poster">
             <div class="movie_info">
-                <p>In a world where cartoons and humans coexist, a detective must solve a zany, high-stakes mystery.
-                    Packed with wild humor, groundbreaking animation, and noir twists, this unique film will pull you
-                    into a world where anything is possible!</p>
+                <p>In a world where cartoons and humans coexist, a detective must solve a zany, high-stakes mystery. Packed with wild humor, groundbreaking animation, and noir twists, this unique film will pull you into a world where anything is possible!</p>
                 <button>Watch Now</button>
             </div>
         </div>
@@ -46,42 +43,25 @@
         <div class="movie_content">
             <img src="assets/barbie.jpg" alt="Barbie Movie Poster">
             <div class="movie_info">
-                <p>Step into the dazzling world of Barbie as she embarks on an unexpected journey from her perfect doll
-                    life to the real world. Filled with humor, heart, and empowering messages, this vibrant adventure
-                    redefines what it means to dream big!</p>
+                <p>Step into the dazzling world of Barbie as she embarks on an unexpected journey from her perfect doll life to the real world. Filled with humor, heart, and empowering messages, this vibrant adventure redefines what it means to dream big!</p>
                 <button>Watch Now</button>
             </div>
         </div>
 
         <!-- Movie Card 4 -->
-        <div class="movie_content">
+        <div class="movie_content split_layout">
             <img src="assets/la-la-land.jpg" alt="La La Land Poster">
             <div class="movie_info">
-                <p>Love, dreams, and the magic of LA take center stage in this musical masterpiece. Watch as two
-                    starry-eyed artists navigate passion and ambition in a world where every moment feels like a
-                    cinematic spectacle!</p>
+                <p>Love, dreams, and the magic of LA take center stage in this musical masterpiece. Watch as two starry-eyed artists navigate passion and ambition in a world where every moment feels like a cinematic spectacle!</p>
                 <button>Watch Now</button>
             </div>
         </div>
 
         <!-- Movie Card 5 -->
-        <div class="movie_content">
+        <div class="movie_content split_layout">
             <img src="assets/hidden-figures.jpg" alt="Hidden Figures Movie Poster">
             <div class="movie_info">
-                <p>Three unsung heroes of NASA's space race take the spotlight in this inspiring true story. Battling
-                    discrimination and defying the odds, these brilliant women prove that intelligence, perseverance,
-                    and unity can change history.</p>
-                <button>Watch Now</button>
-            </div>
-        </div>
-
-        <!-- Movie Card 6 -->
-        <div class="movie_content">
-            <img src="assets/hook.jpg" alt="Hidden Figures Movie Poster">
-            <div class="movie_info">
-                <p>Rediscover Neverland in this thrilling twist on Peter Pan! Robin Williams stars as a grown-up Peter, 
-                    who must rediscover his inner child to rescue his kids from the clutches of Captain Hook. Adventure, 
-                    magic, and nostalgia blend in this timeless family classic.</p>
+                <p>Three unsung heroes of NASA's space race take the spotlight in this inspiring true story. Battling discrimination and defying the odds, these brilliant women prove that intelligence, perseverance, and unity can change history.</p>
                 <button>Watch Now</button>
             </div>
         </div>
