--- a/Trial and error task-2-advanced-layout/index.html
+++ b/Trial and error task-2-advanced-layout/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <h1 class="logo">watch.it</h1>
-            <button class="Search_btn">Search</button>
+            <button class="Search_btn">SEARCH</button>
         </nav>
     </header>
 
