--- a/Trial and error task-2-advanced-layout/index 2.0.html
+++ b/Trial and error task-2-advanced-layout/index 2.0.html
@@ -4,69 +4,107 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> 3.0 watch.it</title>
+    <title>3.0 watch.it</title>
     <link rel="stylesheet" href="style 2.0.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Teko:wght@300..700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <!-- Header Section -->
     <header>
         <nav>
-            <h1 class="logo">watch.it</h1>
-            <button class="Search_btn">Search</button>
+            <h1 class="logo"> watch.it </h1>
+            <!-- This needs to be hidden for mobile screen and only shown for desktop and tablets -->
+            <ul>
+                <li><a href="#"> Action </a></li>
+                <li><a href="#"> Comedy </a></li>
+                <li><a href="#"> Romance </a></li>
+                <li><a href="#"> Drama </a></li>
+            </ul>
+            <button class="Search_btn"> SEARCH </button>
         </nav>
     </header>
 
-    <!-- Main Content Section -->
     <main>
-        <!-- Movie Card 1 (Spans 2 Columns on Desktop) -->
-        <div class="movie_content_featured">
-            <div class="movie_content">
-                <img src="assets/palm-springs.jpg" alt="Palm Springs Movie Poster">
-                <p>A never-ending wedding day turns into an unforgettable time-loop romance! Stuck in the same day, two
-                    strangers find love, chaos, and meaning in the most unexpected ways.</p>
-                <button>Watch Now</button>
+
+        <!-- I have arranged the movie poster according to 
+         their popularity and ratings given to the movies 
+         based on their box office success and critical acclaim 
+         from best to worst -->
+        <div class="movie_container featured">
+            <img src="assets/barbie.jpg" alt="Barbie Movie Poster">
+            <p> Step into the dazzling world of Barbie as she embarks on an unexpected journey
+                from her perfect doll life to the real world. Filled with humor, heart, and
+                empowering messages, this vibrant adventure redefines what it means to dream big!
+            </p>
+            <!-- I had decided to use all capitalised text and follow the
+             design throughout to make the buttons more attention grabbing and 
+             almost convey a sense of perceived importance to make the user want
+             to click on the button when they see it  -->
+            <button> WATCH NOW </button>
+        </div>
+
+        <div class="movie_container">
+            <img src="assets/la-la-land.jpg" alt="La La Land Poster">
+            <p> Love, dreams, and the magic of LA take center stage in this musical masterpiece.
+                Watch as two starry-eyed artists navigate passion and ambition in a world where
+                every moment feels like a cinematic spectacle!
+            </p>
+            <button> WATCH NOW </button>
+        </div>
+
+        <div class="movie_container">
+            <img src="assets/who-framed-roger-rabbit.jpg" alt="Who Framed Roger Rabbit Poster">
+            <p> In a world where cartoons and humans coexist, a detective must solve a zany, high-stakes
+                mystery. Packed with wild humor, groundbreaking animation, and noir twists, this unique
+                film will pull you into a world where anything is possible!
+            </p>
+            <button> WATCH NOW </button>
+        </div>
+
+        <div class="movie_container split">
+            <img src="assets/hidden-figures.jpg" alt="Hidden Figures Movie Poster">
+            <div class="holder">
+                <p> Three unsung heroes of NASA's space race take the spotlight in this inspiring
+                    true story. Battling discrimination and defying the odds, these brilliant
+                    African-American women prove that intelligence, perseverance, and unity can
+                    change history and break barriers.
+                </p>
+                <button> WATCH NOW </button>
             </div>
         </div>
 
-        <!-- Movie Card 2 -->
-        <div class="movie_content">
-            <img src="assets/who-framed-roger-rabbit.jpg" alt="Who Framed Roger Rabbit Poster">
-            <p>In a world where cartoons and humans coexist, a detective must solve a zany, high-stakes mystery.
-                Packed with wild humor, groundbreaking animation, and noir twists, this unique film will pull you
-                into a world where anything is possible!</p>
-            <button>Watch Now</button>
+
+        <div class="movie_container split">
+            <img src="assets/hook.jpg" alt="Hood Movie Poster">
+            <div class="holder">
+                <p> Rediscover Neverland in this thrilling twist on Peter Pan! Robin Williams stars
+                    as a grown-up Peter, who must rediscover his inner child to rescue his kids from
+                    the clutches of Captain Hook. Adventure, magic, and nostalgia blend in this
+                    timeless family classic.
+                </p>
+                <button> WATCH NOW </button>
+            </div>
         </div>
 
-        <!-- Movie Card 3 -->
-        <div class="movie_content">
-            <img src="assets/barbie.jpg" alt="Barbie Movie Poster">
-            <p>Step into the dazzling world of Barbie as she embarks on an unexpected journey from her perfect doll
-                life to the real world. Filled with humor, heart, and empowering messages, this vibrant adventure
-                redefines what it means to dream big!</p>
-            <button>Watch Now</button>
-        </div>
-
-        <!-- Movie Card 4 -->
-            <div class="movie_content split_layout">
-                <img src="assets/la-la-land.jpg" alt="La La Land Poster">
-                <p>Love, dreams, and the magic of LA take center stage in this musical masterpiece. Watch as two
-                    starry-eyed artists navigate passion and ambition in a world where every moment feels like a
-                    cinematic spectacle!</p>
-                <button>Watch Now</button>
-        </div>
-
-        <!-- Movie Card 5 -->
-            <div class="movie_content split_layout">
-                <img src="assets/hidden-figures.jpg" alt="Hidden Figures Movie Poster">
-                <p>Three unsung heroes of NASA's space race take the spotlight in this inspiring true story. Battling
-                    discrimination and defying the odds, these brilliant women prove that intelligence, perseverance,
-                    and unity can change history.</p>
-                <button>Watch Now</button>
+        <div class="movie_container split">
+            <img src="assets/palm-springs.jpg" alt="Palm Springs Poster">
+            <div class="holder">
+                <p> A never-ending wedding day turns into an unforgettable time-loop romance!
+                    Stuck in the same day, two strangers find love, chaos, and meaning in the
+                    most unexpected ways.
+                </p>
+                <button> WATCH NOW </button>
+            </div>
         </div>
     </main>
-</body>
 
+
+
+
+
+</body>
 </html>
